# SIS-gadget

./: Cargo.toml  QUESTIONS.md  README.md  SIS.ipynb
benches/: accumulator_benchmark.rs
src/: accumulator.rs  lib.rs  params.rs
